<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images1"
    tools:context="com.example.android.cricketscore.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/groupA"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/display_score_a"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/slash"
                            android:textSize="45sp" />

                        <TextView
                            android:id="@+id/wicketsA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/noOfWicketsA"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/sixA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="sixA"
                        android:text="@string/six"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/fourA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="fourA"
                        android:text="@string/four"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/threeA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="threeA"
                        android:text="@string/three"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/twoA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="twoA"
                        android:text="@string/two"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/oneA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="oneA"
                        android:text="@string/one"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/wicketA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="wicketA"
                        android:text="@string/wicket"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/groupB"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/display_score_b"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/slash"
                            android:textSize="45sp" />

                        <TextView
                            android:id="@+id/wicketsB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/noOfWicketsA"
                            android:textColor="@android:color/black"
                            android:textSize="45sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/sixB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="sixB"
                        android:text="@string/six"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/fourB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="fourB"
                        android:text="@string/four"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/threeB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="threeB"
                        android:text="@string/three"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/twoB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="twoB"
                        android:text="@string/two"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/oneB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="oneB"
                        android:text="@string/one"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/wicketB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:onClick="wicketB"
                        android:text="@string/wicket"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>


        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>